pycharm无页面化改动

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = -vs --alluredir ./temp
 testpaths = testcases
-python_files = test_userFeed*.py
-python_classes = TestUserFeedb*
-python_functions = test_feedback*
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
 
